# notion_rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  database.rs  error.rs  lib.rs  request.rs  response.rs
tests/: client_test.rs
