[package]
name = "notion_rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
integration = []

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dotenvy = "0.15"
